--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,2 +1,4 @@
 user_uuid="1e573d41-7bad-43aa-be3e-29b88fd7ad4e"
 bucket_name="z6opr9b6z16837mqxz5vkph2yt89n5o3"
+index_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/index.html"
+error_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/error.html"
