--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,5 +1,6 @@
-user_uuid="1e573d41-7bad-43aa-be3e-29b88fd7ad4e"
-bucket_name="z6opr9b6z16837mqxz5vkph2yt89n5o3"
+user_uuid="db8fc491-7712-4149-b2c2-19a84f7c3cc6"
+bucket_name="ivcj9ect1ex2hk158j7uozqdfbdj9f2l"
 index_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/index.html"
 error_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/error.html"
-content_version=2
+assets_path="/workspace/terraform-beginner-bootcamp-2023/public/assets/"
+content_version=1
