--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -1,5 +1,9 @@
 terratowns_endpoint="https://terratowns.cloud/api"
-index_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/index.html"
-error_html_filepath="/workspace/terraform-beginner-bootcamp-2023/public/error.html"
-assets_path="/workspace/terraform-beginner-bootcamp-2023/public/assets/"
-content_version=1
+capetown = {
+  public_path = "/workspace/terraform-beginner-bootcamp-2023/public/capetown
+  content_version = 1 
+}
+cod = {
+  public_path = "/workspace/terraform-beginner-bootcamp-2023/public/cod"
+  content_version = 1 
+}
